# context-graph

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  justfile
.github/workflows/: ci.yml
crates/cg-cli/: Cargo.toml
crates/cg-cli/src/: main.rs
crates/cg-cli/tests/: cli_smoke_tests.rs
crates/cg-core/: Cargo.toml
crates/cg-core/src/: db.rs  fs.rs  git.rs  ingest.rs  lib.rs  model.rs  parser.rs  query.rs
crates/cg-core/tests/: graph_features_test.rs  incremental_test.rs  legacy_port.rs
docs/: incremental-ingestion.md  incremental-validation.md  incremential-test.md  lsp.md  plan.md  treesitter.md
fixtures/legacy_snapshots/: current_implementation.json  typescript_expectations.json
plans/: init.md  phase1-expected-extractions.md
scripts/: ci.sh  test_real_repo.sh  validate_incremental.py  validate_incremental_typescript.sh
src/: main.rs
