[workspace]
members = [
    "crates/cg-cli",
    "crates/cg-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Contributors"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
kuzu = "0.7"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
blake3 = "1.5"
ignore = "0.4"
comfy-table = "7.1"
tempfile = "3.13"
